Salesforce CPQ/main/default/objects/OrderItemConsumptionSchedule__c/fields/BillingTerm__c.field-meta.xml
<CustomField>
    <fullName>BillingTerm__c</fullName>
    <inlineHelpText>The number used with the billing term unit to determine the billing frequency.</inlineHelpText>
    <label>Billing Term</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>