Salesforce CPQ/main/default/objects/OrderItemConsumptionSchedule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>