Salesforce CPQ/main/default/objects/OrderItemConsumptionSchedule__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Product Consumption Schedules</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>